--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
   color: red;
   background-color: black;
 }
@@ -12,4 +12,4 @@ button {
     color: blue;
     background-color: green;
 }
-}
+} */
